2007-08-12  George Giolfan  <georgegiolfan@yahoo.com>

	* ToggleButton.cs: Fixed theme loading.

2007-08-11  George Giolfan  <georgegiolfan@yahoo.com>

	* DragCompletedEventArgs.cs, DragCompletedEventHandler.cs, DragDeltaEventArgs.cs, DragDeltaEventHandler.cs, DragStartedEventArgs.cs, DragStartedEventHandler.cs: Disabled (they cause a test to fail).

2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>

	* DragCompletedEventArgs.cs, DragCompletedEventHandler.cs, DragDeltaEventArgs.cs, DragDeltaEventHandler.cs, DragStartedEventArgs.cs, DragStartedEventHandler.cs: Added.

2007-08-01  George Giolfan  <georgegiolfan@yahoo.com>
	
	* UniformGrid.cs: Implemented layout.

2007-08-01  George Giolfan  <georgegiolfan@yahoo.com>
	
	* UniformGrid.cs: Added.

2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>
	
	* TickBarPlacement.cs: Added.

2007-07-22  George Giolfan  <georgegiolfan@yahoo.com>
	
	* TickPlacement.cs: Added.

2007-07-18  George Giolfan  <georgegiolfan@yahoo.com>
	
	* TickBar.cs: Added a Freeze call on a StreamGeometry.

2007-07-12  George Giolfan  <georgegiolfan@yahoo.com>

	* ItemContainerGenerator.cs: Moved to System.Windows.Controls.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: ItemContainerGenerator.StatusChanged is now handled.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: SelectedItem now sets SelectedIndex.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: Fixed SelectedIndex.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: SelectedIndex now calls OnSelectionChanged.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: Fixed SelectedValueProperty.

2007-07-05  George Giolfan  <georgegiolfan@yahoo.com>

	* Selector.cs: Added.

2007-06-17  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonBase.cs, Thumb.cs: Removed *Internal properties.

2007-06-16  George Giolfan  <georgegiolfan@yahoo.com>

	* TabPanel.cs: Fixed multiple row layout.
